# microsoft-365-agents-toolkit-samples

./: .gitignore  CodeQL.yml
.config/: samples-config-v3.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
NPM-search-connector-M365/: m365agents.local.yml  m365agents.yml
NPM-search-message-extension-codespaces/: index.js  m365agents.local.yml  m365agents.yml
ProxyAgent-CSharp/: .gitignore  LICENSE  README.md
ProxyAgent-NodeJS/: .gitignore  .webappignore  AZURE_DEPLOYMENT.md  CLAUDE.md  LOCAL_DEPLOYMENT.md  README.md  m365agents.local.yml  m365agents.yml  package-lock.json  package.json  tsconfig.json
ProxyAgent-Python/: .flake8  .gitignore  .webappignore  AGENTS_TOOLKIT_README.md  AZURE_DEPLOYMENT.md  LOCAL_DEPLOYMENT.md  README.md  copilot-instructions.md  m365agents.local.yml  m365agents.yml  pyproject.toml
ProxyAgent-Python/appPackage/: manifest.json
ProxyAgent-Python/env/: .env.dev
ProxyAgent-Python/infra/: azure-local.parameters.json  azure.bicep  azure.parameters.json
ProxyAgent-Python/infra/modules/: GUID_ENCODER_GUIDE.md  app-registration.bicep  app-update-sso.bicep  appservice.bicep  update-bot-endpoint.bicep
ProxyAgent-Python/scripts/: devtunnel.ps1  devtunnel.sh
ProxyAgent-Python/src/: __init__.py  agent.py  main.py  requirements.txt  start_server.py  userAuthTokenWrapper.py
adaptive-card-notification/: README.md  m365agents.local.yml  m365agents.yml  package-lock.json  package.json
apim-genai-gateway/: .gitignore  README.md  m365agents.local.yml  m365agents.playground.yml  m365agents.yml  package-lock.json  package.json
basic-blazor-tab-app/: README.md
bot-sso/: README.md  m365agents.local.yml  m365agents.yml  package-lock.json  package.json
bot-sso-docker/: Dockerfile  README.md  m365agents.local.yml  m365agents.yml  package-lock.json  package.json
coffee-agent/: .gitignore  README.md  m365agents.local.yml  m365agents.playground.yml  m365agents.yml  package-lock.json  package.json
collaborator-agent/: .gitignore  .localConfigs.playground  (+6 more)
(+567 files in other folders)
