[project]
name = "proxy-agent-python"
version = "1.0.0"
description = "Microsoft Foundry Agent for Microsoft 365 (Python)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | env
  | infra
  | scripts
  | appPackage
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = [".venv", "env", "build", "dist"]

[tool.pylint.main]
max-line-length = 88
disable = [
    "C0114",  # missing-module-docstring (we have them now)
    "C0116",  # missing-function-docstring (we have them now)
    "R0913",  # too-many-arguments (common in framework code)
    "W0703",  # broad-except (intentional for error handlers)
    "R0801",  # duplicate-code
]
good-names = ["id", "e", "i", "j", "k", "_"]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "azure.*",
    "microsoft_agents.*",
    "jwt",
    "dotenv",
    "uvicorn",
    "fastapi",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
